# triagefixgraph-ai-demo

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.prod.yml
backend/: pyproject.toml
backend/app/: agent.py  config.py  constants.py  context_graph_client.py  gds_client.py  main.py  memory.py  models.py  routes.py
backend/scripts/: 01_export_airtable_incidences_sample.py  02_profile_airtable_incidences.py  03_enrich_all_incidences_for_graph.py  03_enrich_incidents_for_demo.py  04_load_triagefix_graph.py  05_create_semantic_similarity_edges.py  generate_data.py  load_treafefix_decision.py
backend/tests/: test_routes.py
cypher/: gds_projections.cypher  schema.cypher
data/: README.md  fixtures.json
data/airtable_full/: incidences_full.csv
docs/: graph_similarity_definitions.md  triagefix_demo_queries.md  triagefix_python_scripts_reference.md  triagefix_team_playbook.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ContextGraphView.tsx  DecisionTracePanel.tsx  DocumentBrowser.tsx
frontend/e2e/: app.spec.ts
frontend/lib/: config.ts
frontend/theme/: index.ts
notebooks/: 01_explore_triagefix_graph_cases.ipynb  02_explore_property_table.ipynb
notebooks/.ipynb_checkpoints/: 01_explore_triagefix_graph_cases-checkpoint.ipynb  02_explore_property_table-checkpoint.ipynb
