[project]
name = "triagefixgraph-ai-demo-backend"
version = "0.1.0"
description = "Agent Memory Context Graph Backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.20",
    "neo4j-agent-memory[spacy,gliner]>=0.1.0",
    "sentence-transformers>=2.0",
    "openai-agents>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = [
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime==1.23.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

